.DS_store, python_problem 내에 todo.txt 파일 추적하지 않도록 .gitignore에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,6 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/macos
 
+# git이 추적하지 않는 파일
+.DS_store
 ./python_problem/todo.txt
